--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,5 +9,8 @@ html(lang="en")
         header 
             h1 It works!
         main
-            h2 Welcome to here
+            ul
+            form
+                input(type = "text", placeholder = "write a msg", required)
+                buttond Send
         script(src="/public/js/app.js")
