--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,5 +12,5 @@ html(lang="en")
             ul
             form
                 input(type = "text", placeholder = "write a msg", required)
-                buttond Send
+                button Send
         script(src="/public/js/app.js")
