--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,11 +9,6 @@ html(lang="en")
         header 
             h1 It works!
         main
-            form#nickname
-                input(type = "text", placeholder = "Write nickname", required)
-                button Save
-            ul
-            form#msgchat
-                input(type = "text", placeholder = "write a msg", required)
-                button Send
+            
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
